V4309: First full update P&ID Rev. C

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D880.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D880.xaml
@@ -8,12 +8,16 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              x:Class="Prevu.Synoptics.D880" 
              mc:Ignorable="d" 
-              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="427" Width="275">
-        <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="10" Canvas.Top="10" Height="407" Width="256" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSHA" Canvas.Left="110" Canvas.Top="32"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSH" Canvas.Left="110" Canvas.Top="81" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSL" Canvas.Left="112" Canvas.Top="175"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="880-61-LEV" Canvas.Left="100" Canvas.Top="214"/>
+              d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="427" Width="452">
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-61-LEV" SignalName="LSHA" Canvas.Left="59" Canvas.Top="39"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-61-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="94" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-61-LEV" SignalName="LSL" Canvas.Left="101" Canvas.Top="185"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-62-LEV" SignalName="LSHA" Canvas.Left="272" Canvas.Top="39"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="880-62-LEV" SignalName="LSH" Canvas.Left="272" Canvas.Top="94" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-62-LEV" SignalName="LSL" Canvas.Left="307" Canvas.Top="185"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
     </Canvas>
 </UserControl>
