--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P100.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P100" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="36" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1042" Canvas.Top="608" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="36" StatusComponent="103-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1042" Canvas.Top="608" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -85,7 +85,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="172" StatusComponent="120-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1096" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="796" Canvas.Top="400" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="ByProduct" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="102-01-MA1" Canvas.Left="796" Canvas.Top="400" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -95,7 +95,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="698" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="ByProduct" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="102-01-MA1" Canvas.Left="698" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="84" Color="Water" Canvas.Left="246" Canvas.Top="699" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="113-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -172,7 +172,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="543" Canvas.Top="298">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="113-01-MA1" Canvas.Left="543" Canvas.Top="298">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,7 +182,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="404" Canvas.Top="555">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="383" Canvas.Top="555">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -202,7 +202,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="86" StatusComponent="293-01-MA1" Canvas.Left="447" Canvas.Top="512"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="86" StatusComponent="293-01-MA1" Canvas.Left="426" Canvas.Top="512"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="52" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="658" Canvas.Top="524">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -213,7 +213,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1362" Canvas.Top="176">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="52" StatusComponent="123-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1370" Canvas.Top="168">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -300,7 +300,6 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1374" Canvas.Top="194"/>
         <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="623" Canvas.Top="688"/>
         <Machines:NT_ConveyorBelt Height="1" Width="171" Canvas.Left="1233" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Height="44" Canvas.Left="1125" Canvas.Top="124" Width="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -395,7 +394,7 @@
         <Labels:DeviceLabel ComponentName="115-21-CV1" Canvas.Left="202" Canvas.Top="441" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="123-01-MA1" Canvas.Left="1297" Canvas.Top="66"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-22-CV1" Canvas.Left="405" Canvas.Top="411"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="638"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="633"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="155" Canvas.Top="777"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="514" Canvas.Top="700"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="117-71-ECS2" Canvas.Left="670" Canvas.Top="753"/>
@@ -410,7 +409,7 @@
         <Labels:DeviceLabel ComponentName="115-71-ECS3" Canvas.Left="412" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="100-41-LT1" Canvas.Left="603" Canvas.Top="14" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="111-01-MA1" Canvas.Left="1078" Canvas.Top="748" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="115-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="707" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="115-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="120-02-MA1" Canvas.Left="1123" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="104-01-MA1" Canvas.Left="826" Canvas.Top="501"/>
         <Labels:DeviceLabel ComponentName="102-01-MA1" Canvas.Left="670" Canvas.Top="290" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -418,6 +417,17 @@
         <Labels:DeviceLabel ComponentName="127-71-ECS1" Canvas.Left="1352" Canvas.Top="731" RenderTransformOrigin="0.1,1.252" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="120-71-ECS2" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1413" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text=" BOLLEGRAAF" Canvas.Left="1379" Canvas.Top="445" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="3" Stroke="Black" Width="48" Canvas.Left="1372" Canvas.Top="194" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1417" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Machines:External.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:External.RenderTransform>
+        </Machines:External>
 
     </Canvas>
 </UserControl>
