--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
@@ -50,8 +50,8 @@
         <Labels:Pipe Width="59" StatusComponent="291-01-MA1" Canvas.Left="900" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="62" StatusComponent="291-01-MA1" Canvas.Left="529" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="95" StatusComponent="229-21-CV1" Canvas.Left="632" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="270" StatusComponent="227-01-MA1" PipeHeight="Medium" Canvas.Left="786" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="423" StatusComponent="227-01-MA1" PipeHeight="Medium" Canvas.Left="280" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3"/>
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="270" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="786" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2"/>
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="423" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="280" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="215" Canvas.Top="514">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -63,7 +63,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="590" Canvas.Top="724"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="130" StatusComponent="227-01-MA1" PipeHeight="Medium" Canvas.Left="218" Canvas.Top="300" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="130" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="218" Canvas.Top="300" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="143" StatusComponent="208-01-MA1" PipeHeight="Medium" Canvas.Left="176" Canvas.Top="93"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="143" StatusComponent="228-71-ECS3" PipeHeight="Medium" Canvas.Left="176" Canvas.Top="93"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="367" Canvas.Top="691">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -119,7 +119,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="1344" Canvas.Top="721" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="134" StatusComponent="227-01-MA1" PipeHeight="Medium" Canvas.Left="985" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="134" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="985" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
