--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P460.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P460.xaml
@@ -8,8 +8,8 @@
              x:Class="Prevu.Synoptics.P460" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="821" Canvas.Top="434" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" VisibilityComponent="477-21-CV1" Canvas.Left="853" Canvas.Top="463" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="821" Canvas.Top="434" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="853" Canvas.Top="463" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
