--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/WaterView.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/WaterView.xaml
@@ -12,6 +12,59 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="1200" Width="1850" >
+        <Labels:Pipe Color="Water" Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="111-01-MA1" Canvas.Left="296" Canvas.Top="971" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="58" StatusComponent="111-01-MA1" Canvas.Left="269" Canvas.Top="944" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="130" StatusComponent="104-01-MA1" Canvas.Left="310" Canvas.Top="910" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="244" Canvas.Top="900" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="410" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1468" Canvas.Top="848" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1605" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="38" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1528" Canvas.Top="510" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="130" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1545" Canvas.Top="493" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="94" StatusComponent="285-01-MA1" Canvas.Left="829" Canvas.Top="438" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -454,16 +507,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="219" StatusComponent="119-01-MA1" Canvas.Left="33" Canvas.Top="797" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="58" StatusComponent="229-21-CV1" Canvas.Left="247" Canvas.Top="202" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -486,8 +529,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="229-22-CV1" Canvas.Left="397" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Center" Icon="Right"/>
-        <Labels:Pipe Color="Water" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="434" Canvas.Top="900" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="98" StatusComponent="104-01-MA1" Canvas.Left="328" Canvas.Top="843" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="380" Canvas.Top="900" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="56" StatusComponent="104-01-MA1" Canvas.Left="335" Canvas.Top="822" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -497,8 +540,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" Canvas.Left="319" Canvas.Top="796" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="111-01-MA1" Canvas.Left="240" Canvas.Top="917" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" Canvas.Left="305" Canvas.Top="796" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="111-01-MA1" Canvas.Left="240" Canvas.Top="917" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="104"  Canvas.Left="242" Canvas.Top="732" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -529,8 +572,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="119-01-MA1" Canvas.Left="140" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="119-01-MA1" Canvas.Left="140" Canvas.Top="904" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="113-01-MA1" Canvas.Left="118" Canvas.Top="928" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="518-21-CV1" Canvas.Left="1162" Canvas.Top="934" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -565,7 +606,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1389" Canvas.Top="1051" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="286" RenderTransformOrigin="0.5,0.5" StatusComponent="516-01-MA1" Canvas.Left="1389" Canvas.Top="1051" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="510-22-CV1" Canvas.Left="1348" Canvas.Top="1014" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -752,16 +793,6 @@
         <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="771" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="268" Canvas.Top="421" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="465" Canvas.Top="421" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:WaterPump Height="21" Width="24" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="307" Canvas.Top="909" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
         <Machines:WaterPump Height="20" Width="24" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="144" Canvas.Top="949" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -773,16 +804,6 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Machines:WaterPump Height="20" Width="24" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="147" Canvas.Top="920" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Height="20" Width="24" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="147" Canvas.Top="896" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -847,7 +868,6 @@
         <Machines:V01_RTF_Microfilter Canvas.Left="749" Canvas.Top="269" Height="65" Width="75" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="739" Canvas.Top="146" Height="102" Width="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DCT_Decanter Canvas.Left="162" Canvas.Top="883" HorizontalAlignment="Left" VerticalAlignment="Top" Height="132" Width="106" ComponentName="115-41-LT1" TrendName="LEVEL"/>
-        <Machines:V01_VRC_WaterTank Canvas.Left="336" Canvas.Top="881" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="110-41-LT1" TrendName="LEVEL" Height="81" Width="116"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="268" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center" Height="64" Width="56"/>
         <Machines:V01_VRC_WaterTank Canvas.Left="1147" Canvas.Top="337" HorizontalAlignment="Center" VerticalAlignment="Top" Height="80" Width="95" ComponentName="450-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_VRC_WaterTank Canvas.Left="1396" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top" Height="80" Width="116" ComponentName="470-41-LT1" TrendName="LEVEL"/>
@@ -864,17 +884,35 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="1359" Canvas.Top="713" Height="78" Width="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="1432" Canvas.Top="812" Height="74" Width="76" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1357" Canvas.Top="923" Height="78" Width="82" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="1430" Canvas.Top="1022" Height="74" Width="76" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:EXC_HeatExchanger Canvas.Left="1147" Canvas.Top="256" Height="20" Width="24" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Machines:EXC_HeatExchanger.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:EXC_HeatExchanger.RenderTransform>
+        </Machines:EXC_HeatExchanger>
+        <Rectangle Height="40" Width="40" Fill="Gray" RadiusX="8" RadiusY="8" Canvas.Left="356" Canvas.Top="954" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="20" Width="22" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="364" Canvas.Top="964" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Machines:V01_SCW_Screw_wHopper Canvas.Left="341" Canvas.Top="811" Height="74" Width="76" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="888" Canvas.Top="490" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="288-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="888" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-41-LT1" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL"/>
-        <Labels:ValueLabel Canvas.Left="378" Canvas.Top="890" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="110-41-LT1"/>
-        <Labels:ValueLabel Canvas.Left="378" Canvas.Top="911" HorizontalAlignment="Center" VerticalAlignment="Center" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="110-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="201" Canvas.Top="894" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-41-LT1" TrendName="LEVEL"/>
         <Labels:ValueLabel Canvas.Left="201" Canvas.Top="915" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-41-LT1" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME"/>
         <Labels:ValueLabel Canvas.Left="1190" Canvas.Top="953" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="518-41-LT1" TrendName="LEVEL"/>
         <Labels:ValueLabel Canvas.Left="777" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="335-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="777" Canvas.Top="739" HorizontalAlignment="Center" VerticalAlignment="Top" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="335-41-LT1"/>
-        <Labels:ValueLabel Canvas.Left="378" Canvas.Top="933" HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="110-42-TT1" TrendName="TEMPERATURE"/>
         <Labels:ValueLabel Canvas.Left="777" Canvas.Top="755" HorizontalAlignment="Center" VerticalAlignment="Top" TrendName="TEMPERATURE" ComponentName="335-42-TT1"/>
         <Labels:ValueLabel Canvas.Left="710" Canvas.Top="767" HorizontalAlignment="Center" VerticalAlignment="Top" TrendName="LEVEL" ComponentName="330-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="710" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="330-41-LT1"/>
